--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
-body{margin:40px;}
+
+body{
+	margin:40px;
+}
 
 .btn-circle {
   width: 30px;
@@ -8,5 +11,25 @@ body{margin:40px;}
   font-size: 12px;
   line-height: 1.428571429;
   border-radius: 15px;
-  background-color: : #0077B5;
+}
+
+body { 
+    padding-top: 20px; 
+    margin: 40px;
+    background-color: #f5f5f5;
+}
+
+.navbar-Hangman {
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    color:  white;
+    padding: 15px;
+    font-size: 17px;
+}
+
+.navbar { 
+	background-color: #283e4a !important; 
+}
+
+.well { 
+	background-color: white !important; 
 }
